npc bandit displaying through thymeleaf. catchphrase bug fix

--- a/src/main/resources/templates/npcTest.html
+++ b/src/main/resources/templates/npcTest.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 
+<ul>
+	<li th:each="current :${npcs}"><img th:src="${current.portraitAdd}" class="image"></img>
+	<span th:text="${current.catchphrase}"></span></li>
+
+</ul>
 </body>
 </html>
