dialogue box added to demo html

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -7,5 +7,21 @@
 <body>
 	
 	
+	<div class="dialogue_box">                                          
+	   <div class="portrait">
+	   		<img src="/images/bandit.png"></img>
+	   </div>
+	
+	   		<div class="textbox">                
+	
+	   			<h1>
+	   			 <a class="typewrite" data-period="2000" data-type='[ "I ain`t living off tea and peanut butter no more!" ]'> 
+	   			 <span class="wrap"></span>
+	 			 </a>
+	 			 </h1>
+	     			
+	   	 </div>
+	   	 
+	</div>
 </body>
 </html>
