linked html and css page, added portrait

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-
-<title>UI demo test bed</title>
+	<link rel="stylesheet" type="text/css" href="../css/dialogueBox.css" />
+	<title>UI demo test bed</title>
 </head>
 <body>
 	
 	
 	<div class="dialogue_box">                                          
 	   <div class="portrait">
-	   		<img src="/images/bandit.png"></img>
+	   		<img src="/images/placeholder/whm.jpg" height="150"></img>
 	   </div>
 	
 	   		<div class="textbox">                
