--- a/src/main/resources/static/css/dialogueBox.css
+++ b/src/main/resources/static/css/dialogueBox.css
@@ -32,13 +32,37 @@ display: flex;
     margin-top: 1px;
     margin-bottom: 1px;
     font-family: 'VT323', monospace;
-    font-size: 40px;
+    font-size: 20px;
     padding-right: 40px;
 
+
+}
+
+.textbox, #typewriter {
+	display: flex;
+	align-self: flex-start;
+	max-width: 50%;
+    max-height: 200px;
+    margin: auto;
+    margin-left: 30px;
+    z-index: 0;
 
 }
 
 ::-webkit-scrollbar {
     width: 0px;  /* remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible */
+}
+
+.portrait {
+	max-width: 30%;
+	display:flex;
+	min-width: 150px;
+	max-width: 159px;
+    min-height: 200px;
+    max-height: 200px;
+    color: white;
+    align-self: left;
+    margin-top: 30px;
+  
 }
