priest added to demo w/ transparency, flexbox

--- a/src/main/resources/static/css/village.gathering-style.css
+++ b/src/main/resources/static/css/village.gathering-style.css
@@ -68,9 +68,14 @@ display: flex;
 }
 
 .container-villagers {
+	display: flex;
 	
 }
 
+#priest {
+	height: 200px;
+	transform: scaleX(-1);
+}
 #villagers {
 	height: 200px;
 }
