--- a/src/main/resources/static/css/village.gathering-style.css
+++ b/src/main/resources/static/css/village.gathering-style.css
@@ -1,3 +1,8 @@
+body {
+	background-image: url("../images/placeholder/village-square.jpg/");
+	background-repeat: no-repeat;
+	background-size: 1300px 700px;
+}
 
 .dialogue_box {
     min-width: 500px;
@@ -67,14 +72,20 @@ display: flex;
   
 }
 
+#priest-portrait {
+	transform: scaleX(-1);
+}
+
 .container-villagers {
+	margin-top: 150px;
 	display: flex;
-	
+	justify-content: center;
 }
 
 #priest {
 	height: 200px;
 	transform: scaleX(-1);
+	margin-right: 150px;
 }
 #villagers {
 	height: 200px;
